@@ -516,7 +516,7 @@ Ulipad to see that the changes have taken place in the CSW.</p>
 <ol class="loweralpha simple">
 <li>To inspect or edit a snippet, double-click on it's node in the CSW. The
 snippet's text will appear in the lower panel.</li>
-<li>To paste the text of a snippet,whether or not it is showing in the lower
+<li>To paste the text of a snippet, whether or not it is showing in the lower
 panel, hold down the Ctrl key and click on the snippet's node in the CSW.</li>
 </ol>
 </blockquote>
